src/test/good/string.jb
int main() {
	string s = "";
	s = "a" + "b";
	s += "c";
	print(s);
	string t = "d";
	print(s + t);
}
