src/test/bad/unknown_field.jb
record {
	string a;
} my_record;

int main() {
	my_record rec = <
		a = "x";
	>;
	print(rec->b);
}
